@@ -20,7 +20,7 @@
     <properties>
         <java.version>25</java.version>
         <maven.compiler.release>${java.version}</maven.compiler.release>
-        <spring-boot.version>3.3.5</spring-boot.version>
+        <spring-boot.version>3.5.5</spring-boot.version>
         <avro.version>1.11.5</avro.version>
         <protobuf.version>3.25.5</protobuf.version>
         <grpc.version>1.68.1</grpc.version>
@@ -65,6 +65,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
+                    <configuration>
+                        <argLine>-Dnet.bytebuddy.experimental=true -XX:+EnableDynamicAgentLoading</argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
